--- a/bonch/templates/insert_to_journal.html
+++ b/bonch/templates/insert_to_journal.html
@@ -5,121 +5,135 @@
 
 <div class="journal_menu">
     <ul id="menu_p1" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
-        <li><a id="active" href="#">Посещаемость</a></li>
-        <li><a href="#">Работы </a></li>
-        <li><a href="#">Статистика</a></li>
-        <li><a href="#">Аттестация+</a></li>
-        <li><a href="#">Содержание дисциплины</a></li>
-        <li><a href="#">Ведомости</a></li>
+        <li style="margin-top:5px"><a id="active" href="{{url_for('show_journal')}}">Посещаемость</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('students_works')}}">Работы </a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_statistic')}}">Статистика</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_attestation')}}">Аттестация</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_course_materials')}}">Содержание дисциплины</a></li>
+        <li>
+            <div class="form-group">
+                <select name="journal_more" class="custom-select mx-sm-1" id="journal_disp"
+                        style="color:black; border-radius: 50px; background-color:white"> <!-- #FEEFDD -->
+                    <option selected>Выбрать</option>
+                    <option value="Ведомости">Ведомости</option>
+                    <option value="Програмная инженерия">Сост. аудиторий</option>
+                    <option value="Програмная инженерия">Инструкция</option>
+                    <option value="Програмная инженерия">Замена ППС (на сегодня)</option>
+                </select>
+            </div>
+        </li>
     </ul>
-    <!--<ul id="menu_p2" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
-        <li><a href="#">Состояние аудиторий</a></li>
-        <li><a href="#">Замена ППС (на сегодня)</a></li>
-        <li><a href="#">Инструкции</a></li>
-            <li>
-        <div class="btn-group new">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Дополнительно
-      </button>
-
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Дополнительно</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Separated link</a>
-      </div>
-    </div>
-           </li>
-    </ul> -->
 </div>
 <form id="insert_visits" action="{{ url_for('insert_to_journal', day_index=index) }}" method="POST"></form>
 <div class="table_area">
-        <table align=left class="table table-bordered" style="width: 300px">
-            <tr class="table__header">
-                {% for header in headings %}
-                {% if headings.index(header) == 0 %}
-                <th class="table__cell_fixed" style="width: 300px; position: sticky;">
-                    {{header[0]}} <br>  <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
-                </th>
+    <table align=left class="table table-bordered" style="width: 300px">
+        <tr class="table__header">
+            {% for header in headings %}
+            {% if headings.index(header) == 0 %}
+            <th class="table__cell_fixed" style="width: 300px; position: sticky;">
+                {{header[0]}} <br>
+                <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
+            </th>
 
-                {% elif headings.index(header) == index %}
-                <th  class="table__cell" style="background-color:#FEEFDD; width: 300px">
-                    {{header[0]}} <br>  <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
-                </th>
-                {% else %}
-                <th class="table__cell" style="width: 300px">
-                    {{header[0]}} <br>  <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
-                </th>
-                {% endif %}
-                {% endfor %}
-            </tr>
-
-
-            {% for row in data %}
-<!--            {% print(row) %}-->
-            <tr align=left class="table__row">
-                {% for cell in row %}
-
-                {% if row.index(cell) == 0 %}
-                <td class="table__cell_fixed" style="width: 300px; position: sticky;">
-
-                    {{cell[0]}}.  {{cell[1]}}  <br> <p style="font-weight:bold; color: #F6941E; margin:0px;">&emsp;{{cell[2]}} </p>
-
-                </td>
-
-
-
-                {% elif row.index(cell) == 1 and inserting %}
-
-                <th style="background-color:#FEEFDD">
-
-                    <div class="boxed">
-                       <label style="margin-left: 10px; margin-right:20px; border: 0px;">100%</label>
-                       <input type="radio" id="be{{data.index(row)}}" name="{{data.index(row)}}" value="П{{data.index(row)}}" form="insert_visits">
-                       <label style="margin-right:10px" for="be{{data.index(row)}}">П</label>
-
-                       <input type="radio" id="absent_without_a_valid_reason{{data.index(row)}}" name="{{data.index(row)}}" value="Н{{data.index(row)}}" form="insert_visits">
-                       <label for="absent_without_a_valid_reason{{data.index(row)}}">Н</label>
-
-                        <input type="radio" id="ill{{data.index(row)}}" name="{{data.index(row)}}" value="Б{{data.index(row)}}" form="insert_visits">
-                       <label for="ill{{data.index(row)}}">Б</label>
-
-                        <input type="radio" id="absent_with_a_good_reason{{data.index(row)}}" name="{{data.index(row)}}" value="У{{data.index(row)}}" form="insert_visits">
-                       <label style="margin-right:10px" for="absent_with_a_good_reason{{data.index(row)}}">У</label>
-
-                        <input type="text" id="mark{{data.index(row)}}" name="mark"  form="insert_visits" placeholder="Оценка">
-
-                    </div>
-
-                </th>
-
-                {% elif row.index(cell) == index %}
-
-                <th style="background-color:#FEEFDD" class="table__cell"> {{cell}}
-                </th>
-
-                {% else %}
-                <th class="table__cell">
-
-
-                    {{cell}}
-
-                </th>
-
-                {% endif %}
-
-
-                {% endfor %}
-            </tr>
+            {% elif headings.index(header) == index %}
+            <th class="table__cell" style="background-color:#FEEFDD; width: 300px">
+                {{header[0]}}
+                <br>
+                <div style="display:flex; margin:0px">
+                    <p style="color:black; margin:0px; margin-top: 5px; font-weight: normal"> {{header[1]}} </p>
+                    <p style="color:grey; margin:0px; margin-top: 5px; margin-left: 10px; font-weight: normal">
+                        {{header[2]}} </p>
+                </div>
+                <div style="display:flex; margin:0px">
+                    <p style="color:grey; margin:0px; margin-top: 5px; font-weight: normal"> {{header[3]}} </p>
+                </div>
+            </th>
+            {% else %}
+            <th class="table__cell" style="width: 300px">
+                {{header[0]}}
+                <br>
+                <div style="display:flex; margin:0px">
+                    <p style="color:black; margin:0px; margin-top: 5px; font-weight: normal"> {{header[1]}} </p>
+                    <p style="color:grey; margin:0px; margin-top: 5px; margin-left: 10px; font-weight: normal">
+                        {{header[2]}} </p>
+                </div>
+                <div style="display:flex; margin:0px">
+                    <p style="color:grey; margin:0px; margin-top: 5px; font-weight: normal"> {{header[3]}} </p>
+                </div>
+            </th>
+            {% endif %}
             {% endfor %}
-        </table>
+        </tr>
+
+
+        {% for row in data %}
+        <!--            {% print(row) %}-->
+        <tr align=left class="table__row">
+            {% for cell in row %}
+
+            {% if row.index(cell) == 0 %}
+            <td class="table__cell_fixed" style="width: 300px; position: sticky;">
+
+                {{cell[0]}}. {{cell[1]}} <br>
+                <p style="font-weight:bold; color: #F6941E; margin:0px;">&emsp;{{cell[2]}} </p>
+
+            </td>
+
+
+            {% elif row.index(cell) == 1 and inserting %}
+
+            <th style="background-color:#FEEFDD">
+
+                <div class="boxed">
+                    <label style="margin-left: 10px; margin-right:20px; border: 0px;">100%</label>
+                    <input type="radio" id="be{{data.index(row)}}" name="{{data.index(row)}}"
+                           value="П{{data.index(row)}}" form="insert_visits">
+                    <label style="margin-right:10px" for="be{{data.index(row)}}">П</label>
+
+                    <input type="radio" id="absent_without_a_valid_reason{{data.index(row)}}" name="{{data.index(row)}}"
+                           value="Н{{data.index(row)}}" form="insert_visits">
+                    <label for="absent_without_a_valid_reason{{data.index(row)}}">Н</label>
+
+                    <input type="radio" id="ill{{data.index(row)}}" name="{{data.index(row)}}"
+                           value="Б{{data.index(row)}}" form="insert_visits">
+                    <label for="ill{{data.index(row)}}">Б</label>
+
+                    <input type="radio" id="absent_with_a_good_reason{{data.index(row)}}" name="{{data.index(row)}}"
+                           value="У{{data.index(row)}}" form="insert_visits">
+                    <label style="margin-right:10px" for="absent_with_a_good_reason{{data.index(row)}}">У</label>
+
+                    <input type="text" id="mark{{data.index(row)}}" name="mark" form="insert_visits"
+                           placeholder="Оценка">
+
+                </div>
+
+            </th>
+
+            {% elif row.index(cell) == index %}
+
+            <th style="background-color:#FEEFDD" class="table__cell"> {{cell}}
+            </th>
+
+            {% else %}
+            <th class="table__cell">
+
+
+                {{cell}}
+
+            </th>
+
+            {% endif %}
+
+
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </table>
 
 </div>
 <div style="padding-top: 15px; padding-left: 315px; padding-bottom: 25px">
-<button form="insert_visits" class="btn btn-outline-success my-2 my-sm-0" type="submit" >Подписать</button>
+    <button form="insert_visits" class="btn btn-outline-success my-2 my-sm-0" type="submit">Подписать</button>
 </div>
-
 
 
 {% endblock %}
