--- a/bonch/templates/journal.html
+++ b/bonch/templates/journal.html
@@ -1,81 +1,155 @@
 {% extends "start_journal.html" %}
 
 {% block content %}
+<div class="journal_menu">
+    <ul id="menu_p1" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
+        <li style="margin-top:5px"><a id="active" href="{{url_for('show_journal')}}">Посещаемость</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('students_works')}}">Работы </a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_statistic')}}">Статистика</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_attestation')}}">Аттестация</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_course_materials')}}">Содержание дисциплины</a></li>
+        <li>
+            <div class="form-group">
+                <select name="journal_more" class="custom-select mx-sm-1" id="journal_disp"
+                        style="color:black; border-radius: 50px; background-color:white"> <!-- #FEEFDD -->
+                    <option selected>Выбрать</option>
+                    <option value="Ведомости">Ведомости</option>
+                    <option value="Програмная инженерия">Сост. аудиторий</option>
+                    <option value="Програмная инженерия">Инструкция</option>
+                    <option value="Програмная инженерия">Замена ППС (на сегодня)</option>
+                </select>
+            </div>
+        </li>
+    </ul>
+</div>
 <div class="table_area">
-        <table align=left class="table table-bordered">
-            <tr class="table__header">
-                {% for header in headings %}
+    <table align=left class="table table-bordered">
+        <tr class="table__header">
+            {% for header in headings %}
 
-                {% if headings.index(header) == 0 %}
-                <th class="table__cell_fixed">
-                    {{header[0]}} <br>  <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
-                </th>
+            {% if headings.index(header) == 0 %}
+            <th class="table__cell_fixed" style="height: 300px !Important;">
+                {{header[0]}}
+                <br>
+                <div style="display:flex; margin:0px">
+                    <p style="color:black; margin:0px; margin-top: 5px; font-weight: normal"> {{header[1]}} </p>
+                    <p style="color:grey; margin:0px; margin-top: 5px; margin-left: 10px; font-weight: normal">
+                        {{header[2]}} </p>
+                </div>
+                <div style="display:flex; margin:0px">
+                    <p style="color:grey; margin:0px; margin-top: 5px; font-weight: normal"> {{header[3]}} </p>
+                </div>
 
-                {% elif headings.index(header) == index %}
-                <th style="background-color:#FEEFDD" class="table__cell">
-                    <div style="display:flex; justify-content: space-between;">
-                        <div>
-                    {{header[0]}} <br>  <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
+            </th>
+
+            {% elif headings.index(header) == index %}
+            <th style="background-color:#FEEFDD" class="table__cell">
+                <div style="display:flex; justify-content: space-between;">
+                    <div>
+                        {{header[0]}}
+                        <br>
+                        <div style="display:flex; margin:0px">
+                            <p style="color:black; margin:0px; margin-top: 5px; font-weight: normal"> {{header[1]}} </p>
+                            <p style="color:grey; margin:0px; margin-top: 5px; margin-left: 10px; font-weight: normal">
+                                {{header[2]}} </p>
                         </div>
-                         {% if data[0][index][1] == "" %}
-                        <a href="{{ url_for('insert_to_journal', day_index=headings.index(header)) }}">
-                            <img src="/static/img/edit_icon_orange.svg" alt="edit icon">
-                        </a>
-                        {% else %}
-                        <a href="{{ url_for('insert_to_journal', index=headings.index(header)) }}">
-                            <img src="/static/img/edit_icon.svg" alt="edit icon">
-                        </a>
-                        {% endif %}
-                    </div>
-                </th>
-                {% else %}
-                <th class="table__cell">
-                    <div style="display:flex; justify-content: space-between;">
-                        <div>
-                    {{header[0]}} <br>  <p style="color:grey; margin:0px; font-weight: normal"> {{header[1]}} </p>
+                        <div style="display:flex; margin:0px">
+                            <p style="color:grey; margin:0px; margin-top: 5px; font-weight: normal"> {{header[3]}} </p>
                         </div>
 
-                         {% if data[0][headings.index(header)][1] != "" %}
-
-                        <a href="{{ url_for('insert_to_journal', day_index=headings.index(header)) }}">
-                            <img src="/static/img/edit_icon.svg" alt="edit icon">
-                        </a>
-                        {% endif %}
 
                     </div>
-                </th>
-                {% endif %}
-                {% endfor %}
-            </tr>
 
+                    {% if data[0][index][1] == "" %}
+                    <a href="{{ url_for('insert_to_journal', day_index=headings.index(header)) }}">
+                        <img src="/static/img/edit_icon_orange.svg" alt="edit icon">
+                    </a>
+                    {% else %}
+                    <a href="{{ url_for('insert_to_journal', index=headings.index(header)) }}">
+                        <img src="/static/img/edit_icon.svg" alt="edit icon">
+                    </a>
+                    {% endif %}
+                </div>
+            </th>
+            {% else %}
+            <th class="table__cell">
+                <div style="display:flex; justify-content: space-between;">
+                    <div>
+                        {{header[0]}}
+                        <br>
+                        <div style="display:flex; margin:0px">
+                            <p style="color:black; margin:0px; margin-top: 5px; font-weight: normal"> {{header[1]}} </p>
+                            <p style="color:grey; margin:0px; margin-top: 5px; margin-left: 10px; font-weight: normal">
+                                {{header[2]}} </p>
+                        </div>
+                        <div style="display:flex; margin:0px">
+                            <p style="color:grey; margin:0px; margin-top: 5px; font-weight: normal"> {{header[3]}} </p>
+                        </div>
 
-            {% for row in data %}
+                    </div>
 
-            <tr align=left class="table__row">
-                {% for cell in row %}
+                    {% if data[0][headings.index(header)][1] != "" %}
 
-                {% if row.index(cell) == 0 %}
-                <td class="table__cell_fixed">
-                       {{cell[0]}}.  {{cell[1]}}  <br> <p style="font-weight:bold; color: #F6941E; margin:0px;">&emsp;{{cell[2]}} </p>
-                </td>
+                    <a href="{{ url_for('insert_to_journal', day_index=headings.index(header)) }}">
+                        <img src="/static/img/edit_icon.svg" alt="edit icon">
+                    </a>
+                    {% endif %}
 
-
-                {% elif row.index(cell) == index %}
-
-                <th style="background-color:#FEEFDD" class="table__cell">
-
-                    {{cell[1]}} {{cell[2]}}
-                </th>
-
-                {% else %}
-                <th class="table__cell">
-                     {{cell[1]}} {{cell[2]}}
-                </th>
-
-                {% endif %}
-                {% endfor %}
-            </tr>
+                </div>
+            </th>
+            {% endif %}
             {% endfor %}
-        </table>
+        </tr>
+
+
+        {% for row in data %}
+
+        <tr align=left class="table__row">
+            {% for cell in row %}
+
+            {% if row.index(cell) == 0 %}
+            <td class="table__cell_fixed">
+                {{cell[0]}}. {{cell[1]}} <br>
+                <p style="font-weight:bold; color: #F6941E; margin:0px;">&emsp;{{cell[2]}} </p>
+            </td>
+
+
+            {% elif row.index(cell) == index %}
+
+            <th style="background-color:#FEEFDD" class="table__cell">
+                {% if cell[2] == '' %}
+                <div style="display: flex">
+                    <p>{{cell[1]}}</p>
+                    <p style="font-weight: normal; margin-left: 10px">{{cell[2]}}</p>
+                </div>
+                {% else %}
+                <div style="display: flex">
+                    <p>{{cell[1]}},</p>
+                    <p style="font-weight: normal; margin-left: 10px">{{cell[2]}}</p>
+                </div>
+                {% endif %}
+
+            </th>
+
+            {% else %}
+            <th class="table__cell">
+                {% if cell[2] == '' %}
+                <div style="display: flex">
+                    <p>{{cell[1]}}</p>
+                    <p style="font-weight: normal; margin-left: 10px">{{cell[2]}}</p>
+                </div>
+                {% else %}
+                <div style="display: flex">
+                    <p>{{cell[1]}},</p>
+                    <p style="font-weight: normal; margin-left: 10px">{{cell[2]}}</p>
+                </div>
+                {% endif %}
+            </th>
+
+            {% endif %}
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </table>
 </div>
 {% endblock %}
