--- a/bonch/templates/statistic.html
+++ b/bonch/templates/statistic.html
@@ -1,7 +1,48 @@
 {% extends "start_journal.html" %}
 
 {% block content %}
+<div class="journal_menu">
+    <ul id="menu_p1" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
+        <li style="margin-top:5px"><a href="{{url_for('show_journal')}}">Посещаемость</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('students_works')}}">Работы </a></li>
+        <li style="margin-top:5px"><a id="active" href="{{url_for('show_statistic')}}">Статистика</a></li>
+        <li style="margin-top:5px"><a  href="{{url_for('show_attestation')}}">Аттестация</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('show_course_materials')}}">Содержание дисциплины</a></li>
+        <li>
+            <div class="form-group">
+                <select name="journal_more" class="custom-select mx-sm-1" id="journal_disp" style="color:black; border-radius: 50px; background-color:white"> <!-- #FEEFDD -->
+                    <option selected>Выбрать</option>
+                    <option value="Ведомости">Ведомости</option>
+                    <option value="Програмная инженерия">Сост. аудиторий</option>
+                    <option value="Програмная инженерия">Инструкция</option>
+                    <option value="Програмная инженерия">Замена ППС (на сегодня)</option>
+                </select>
+            </div>
+        </li>
+    </ul>
+</div>
+<div style="padding-left:20px; padding-right:10px; padding-top: 25px; height: 100%; width: 100%; display:flex; flex-direction: column;">
+ {% for id in ids %}
 
-<p>Статистика</p>
+        <div style="margin-bottom: 15px" id="{{id}}"></div>
+        {% if id=="graph-0" %}
+    <div style="display:flex;flex-direction: row; align-items: center; justify-content: center; margin-bottom:45px">
+        <div style="display:flex">
+            <div style="width: 25px; height: 25px; background-color: #F9F9F9; border:1px solid grey;"></div><p style="margin-left:10px">Не назначено для сдачи</p>
+        </div>
+         <div style="display:flex; margin-left: 25px">
+            <div style="width: 25px; height: 25px; background-color: #A3C285"></div><p style="margin-left:10px">Сдано вовремя </p>
+        </div>
+        <div style="display:flex; margin-left: 25px">
+            <div style="width: 25px; height: 25px; background-color: #FFC266"></div><p style="margin-left:10px">Сдано  с большим опозданием (>14 дн)</p>
+        </div>
+        <div style="display:flex; margin-left: 25px">
+            <div style="width: 25px; height: 25px; background-color: #E06666"></div><p style="margin-left:10px">Не сдано</p>
+        </div>
 
+    </div>
+        {% endif %}
+    {% endfor %}
+
+</div>
 {% endblock %}
