--- a/bonch/templates/journal_visits.html
+++ b/bonch/templates/journal_visits.html
@@ -68,7 +68,7 @@
                         <input type="radio" id="absent_with_a_good_reason{{data.index(row)}}" name="{{data.index(row)}}" value="У{{data.index(row)}}" form="my_form">
                        <label style="margin-right:10px" for="absent_with_a_good_reason{{data.index(row)}}">У</label>
 
-                        <input type="text" id="mark{{data.index(row)}}" name="mark"  form="my_form">
+                        <input type="text" id="mark{{data.index(row)}}" name="mark{{data.index(row)}}"  form="my_form">
 <!--                        placeholder="Оценка"-->
 
 
